// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component OfflineSnackbar renderMessage returns expected message 1`] = `
<WithStyles(Grid)
  alignContent="center"
  alignItems="center"
  container={true}
  justify="center"
>
  <WithStyles(Grid)
    item={true}
    xs={true}
  />
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "marginRight": 24,
      }
    }
  >
    icon
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    message
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={true}
  />
</WithStyles(Grid)>
`;

exports[`Component OfflineSnackbar renders back online snackbar 1`] = `
<div
  className="offlineSnackbar"
>
  <WithStyles(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message={
      <WithStyles(Grid)
        alignContent="center"
        alignItems="center"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <pure(LinkIcon)
            className={undefined}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          Your connection is back online
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
      </WithStyles(Grid)>
    }
    onClose={[Function]}
    open={true}
  />
</div>
`;

exports[`Component OfflineSnackbar renders hidden (open: false) snackbar 1`] = `
<div
  className="offlineSnackbar"
>
  <WithStyles(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message={
      <WithStyles(Grid)
        alignContent="center"
        alignItems="center"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <pure(LinkIcon)
            className={undefined}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          Your connection is back online
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
      </WithStyles(Grid)>
    }
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component OfflineSnackbar renders offline snackbar 1`] = `
<div
  className="offlineSnackbar"
>
  <WithStyles(Snackbar)
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={null}
    message={
      <WithStyles(Grid)
        alignContent="center"
        alignItems="center"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <pure(LinkOffIcon)
            className={undefined}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          Your connection is offline
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
      </WithStyles(Grid)>
    }
    onClose={[Function]}
    open={true}
  />
</div>
`;
